
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textDirection="rtl"
        android:orientation="vertical"
          android:padding="16dp"
        android:layout_gravity="center"
    tools:context=".Activity.LoginActivity">


        <!-- app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_main">-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/text_boarder"
        android:fontFamily="@font/tahoma"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp" />
<!--
        <ImageView
            android:id="@+id/logoAppointmentPatient"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/home2" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Login"
        android:paddingTop="30dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- android:background="@drawable/boarder"
      android:drawableLeft="@drawable/ic_user"
     android:drawableStart="@drawable/ic_user"
    -->
        <EditText
            android:id="@+id/email"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="16dp"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:selectAllOnFocus="false"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
           />
    <!--  android:background="@drawable/boarder"
          android:drawableLeft="@drawable/ic_user"
          android:drawableStart="@drawable/ic_key"
        -->
        <EditText
            android:id="@+id/password"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            />


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/registerbut"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/Login" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:text="@string/register_user"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:autoLink="none"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/foreget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:autoLink="none"
                android:text="@string/forget_password"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>




